--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,12 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-console": "off",
+        "no-unused-vars": "off",
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "no-plusplus": "off"
     }
 }
