--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
             "error",
             "single"
         ],
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "no-shadow": "off"
     }
 }
